--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <div class="encabezado">
-            <h1> Este es el encabezado </h1>
+            <h1> Este es el encabezado en “Master" </h1>
         </div>
+        
 
         <h2>Por favor llena el formulario</h2>
         <form class="formulario" action="/pagina_destino.php">
